// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeLevels with first and second level selected 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      department
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value="Tarija"
    >
      <option
        disabled={true}
        value=""
      />
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      province
    </label>
    <select
      className="input-large"
      name="city"
      onBlur={[Function]}
      onChange={[Function]}
      value="Méndez"
    >
      <option
        disabled={true}
        value=""
      />
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      city
    </label>
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </p>
</div>
`;

exports[`ThreeLevels with first level selected and second level not selected 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      department
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value="Tarija"
    >
      <option
        disabled={true}
        value=""
      />
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      province
    </label>
    <select
      className="input-large"
      name="city"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    >
      <option
        disabled={undefined}
        value=""
      />
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      city
    </label>
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </p>
</div>
`;

exports[`ThreeLevels with first, second and third level and postalCode selected 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      department
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value="Tarija"
    >
      <option
        disabled={true}
        value=""
      />
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      province
    </label>
    <select
      className="input-large"
      name="city"
      onBlur={[Function]}
      onChange={[Function]}
      value="Méndez"
    >
      <option
        disabled={true}
        value=""
      />
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      city
    </label>
    <select
      name="neighborhood"
      onChange={[Function]}
      value="Canasmoro___90400"
    >
      <option
        value=""
      />
    </select>
  </p>
</div>
`;

exports[`ThreeLevels with first, second and third level selected and not postal code 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      department
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value="Tarija"
    >
      <option
        disabled={true}
        value=""
      />
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      province
    </label>
    <select
      className="input-large"
      name="city"
      onBlur={[Function]}
      onChange={[Function]}
      value="Méndez"
    >
      <option
        disabled={true}
        value=""
      />
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      city
    </label>
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </p>
</div>
`;

exports[`ThreeLevels without first and second level selected 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      department
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    >
      <option
        disabled={undefined}
        value=""
      />
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      province
    </label>
    <select
      className="input-large"
      name="city"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    >
      <option
        disabled={undefined}
        value=""
      />
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      city
    </label>
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </p>
</div>
`;
